Fixed ad layout issues

--- a/views/themed/weatherph/webroot/css/theme.css
+++ b/views/themed/weatherph/webroot/css/theme.css
@@ -91,7 +91,8 @@ hr {
 
 #container {
     width: 1000px;
-    margin: 0 auto;
+    float: left;
+    margin: 0 auto auto 8em; /*Ads*/
 }
 
 .banner {
@@ -902,7 +903,7 @@ span.temperature {
 .dropdown li {
     position:relative;
     display: inline;
-    padding: 0 1.25em;
+    padding: 0 1em;
 }
 
 .dropdown form {
@@ -920,7 +921,7 @@ span.temperature {
     background-color: rgba(32,48,77,.9);
     position:absolute;
     left:-9999px;
-    margin:0;
+    margin-top: -4px;
     padding:0;
     text-align:left;
 }
